# CPE-3IRC-AlgoC

./: .gitignore
Groupe2/TP1/: CONTRIBUTORS  README
Groupe2/TP1/src/: binaire.c  bonjour.c  boucles.c  cercle.c  conditions.c  opérateurs.c  opérateurs2.c  sizeof_types.c  variables.c
Groupe2/TP2/: README  TP2.md
Groupe2/TP2/src/: bits  bits.c  chaine  chaine.c  couleurs  etudiant  etudiant.c  etudiant2  etudiant2.c  fibonacci  fibonacci.c  ptrvariables  ptrvariables.c  puissance  puissance.c  tableauptr  tableauptr.c
Groupe2/TP3/: README  TP3.md
Groupe2/TP3/src/: chercher.c  chercher_char.c  couleur_compteur.c  couleurs.c  grand_petit.c  octets.c  recherche_dichotomique.c  sizeof.c  tri.c
Groupe2/TP4/: README  etudiant_bd.db
Groupe2/TP4/src/: calcule.c  chercherfichier.c  etudiant_bd.c  factorielle.c  fichier.c  fichier.h  liste.c  liste.h  operator.c  operator.h
Groupe2/TP5/: CMakeLists.txt  README  TP5.md
Groupe2/TP5/src/: Makefile  client.c  client.h  combinator.c  combinator.h  operator.c  operator.h  repertoire.c  repertoire.h  serveur.c  serveur.h
Groupe2/TP6/: README
Groupe2/TP6/src/: Makefile  client.c  client.h  combinator.c  combinator.h  serveur.c  serveur.h
